--- a/templates/tutorials/viewTutorials.html
+++ b/templates/tutorials/viewTutorials.html
@@ -289,6 +289,7 @@
                             <tr>
                                 <th>Course Title</th>
                                 <th>Course Description</th>
+                                <th>Class</th>
                                 <th>Category</th>
                                 <th>Course Duration</th>
                                 <th>Course Fees</th>
@@ -306,6 +307,7 @@
                                 <td>
                                     <p style="color: black;font-size: 14px;">{{i.Description}}</p>
                                 </td>
+                                <td>{{i.forclass}}</td>
                                 <td>{{i.Course.courseName}}</td>
                                 <td>{{i.Duration}}</td>
                                 <td>{{i.Fees}}</td>
