--- a/templates/Notes/addNotesInstitute.html
+++ b/templates/Notes/addNotesInstitute.html
@@ -346,13 +346,16 @@
                         <div class="col-lg-5 col-md-6 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
                                 class="text-danger">*</span></label>
-                            <div class="w-100 col-sm-7 col-7">
-                                <input type="file" class="custom-file-input" id="validatedCustomFile" required
+                            <div class="file-box w-100 col-sm-7 col-7">
+                                <input type="file" class="custom-file-input" required onchange="addfile(this)"
                                     name="note" accept="application/pdf">
                                 <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
                                 <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
+                            <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add File</button>
                         </div>
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
                             <textarea type="text" class="form-control my-2 w-100" name='description'
@@ -418,8 +421,8 @@
     </div>
 </div>
 <script>
-    $('#validatedCustomFile').change(function () {
-        var file = $('#validatedCustomFile').val();
+    function addfile(el) {
+        var file = $(el).val();
         var exts = ['pdf'];
         // first check if file field has any value
         if (file) {
@@ -430,15 +433,15 @@
             // check file type is valid as given in 'exts' array
             if ($.inArray(get_ext[0].toLowerCase(), exts) > -1) {
                 var filename = file.replace(/^.*\\/, "");
-                $(".custom-file-label").html(filename);
+                $(el).closest(".file-box").find(".custom-file-label").html(filename);
             } else {
-                $(".custom-file-label").html("Choose File");
-                $('.invalid-feedback').show();
-                $('#validatedCustomFile').val("");
-                $('#validatedCustomFile').val().focus();
+                $(el).closest(".file-box").find(".custom-file-label").html("Choose File");
+                $(el).closest(".file-box").find('.invalid-feedback').show();
+                $(el).closest(".file-box").find('#validatedCustomFile').val("");
+                $(el).closest(".file-box").find('#validatedCustomFile').val().focus();
             }
         }
-    });
+    }
 </script>
 <script>
     function selectclass() {
@@ -463,5 +466,19 @@
             },
         });
     }
+
+    function duplicate(el) {
+        $(el).parent().before(`<div class="col-lg-5 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-5 col-5 mt-2" style="color: black;">Choose File<span
+                                class="text-danger">*</span></label>
+                            <div class="file-box w-100 col-sm-7 col-7">
+                                <input type="file" class="custom-file-input" required onchange="addfile(this)"
+                                    name="note" accept="application/pdf">
+                                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                                <div class="invalid-feedback">Invalid File Format ( Valid Formats are .pdf only )
+                                </div>
+                            </div>
+                        </div>`)
+                    }
 </script>
 {% endblock main-content %}
