--- a/templates/teacher/addTutors.html
+++ b/templates/teacher/addTutors.html
@@ -288,7 +288,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12  col-12 d-flex justify-content-end">
                         <button class="btn btn-info btn-md" type="button" onclick="duplicate(this)">Add
-                            New</button>
+                            New Course</button>
                     </div>
                 <hr>
                 <div class="form-group">
@@ -485,8 +485,8 @@
                 $(el).closest(".entry").find(".ttn").empty().trigger("change");
                 for (i = 0; i < teaching.length; i++) {
                     var newOption = new Option(
-                        teaching[i][0],
-                        teaching[i][0],
+                        teaching[i],
+                        teaching[i],
                         false,
                         false
                     );
