--- a/templates/tutorials/editTutorialTutor.html
+++ b/templates/tutorials/editTutorialTutor.html
@@ -26,17 +26,17 @@
             <div class="card-body">
                 <form id='submitForm' method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
-                    
+
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Title</label>
-                            <input type="text" class="form-control w-100 col-sm-8 col-7" id="firstName " name='title' placeholder="Course Title" required value="{{tutorial.Title}}">
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Title<span
+                                    class="text-danger">*</span></label>
+                            <input type="text" class="form-control w-100 col-sm-8 col-7" id="firstName " name='title'
+                                placeholder="Course Title" required value="{{tutorial.Title}}">
                         </div>
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Time</label>
-                            <select name="duration" class="custom-select form-control w-100 col-sm-8 col-7"
-                                required>
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Time<span
+                                    class="text-danger">*</span></label>
+                            <select name="duration" class="custom-select form-control w-100 col-sm-8 col-7" required>
                                 <option disabled selected>{{tutorial.Duration}}</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -47,23 +47,29 @@
                             </select>
                         </div>
                         <div class="col-lg-4 col-12 col-md-6 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Fess</label>
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Fees<span
+                                    class="text-danger">*</span></label>
                             <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
-                                class="form-control w-100 col-sm-8 col-7" name="fees" placeholder="Course Fees"
-                                required value="{{tutorial.Fees}}">
+                                class="form-control w-100 col-sm-8 col-7" name="fees" placeholder="Course Fees" required
+                                value="{{tutorial.Fees}}">
+                        </div>
+                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount Type</label>
+                            <select name="unit" class="custom-select form-control w-100 col-sm-8 col-7" required>
+                                <option selected value="0">In Percentage (%)</option>
+                                <option value="1">In Rupees </option>
+                            </select>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Discount</label>
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Discount</label>
                             <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
                                 class="form-control w-100 col-sm-8 col-7" name="feeDisc"
                                 placeholder="(in %)Fees Discount" required value="{{tutorial.Discount}}">
                         </div>
                         <div class="col-lg-4 col-md-6 col-12 input-group form-group">
-                            <label class="control-label col-sm-4 col-5 mt-2"
-                                style="color: black;">Validity</label>
-                            <input type="date" class="form-control col-sm-8 col-7" name="discValidity" value="{{tutorial.Validity}}">
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Validity</label>
+                            <input type="date" class="form-control col-sm-8 col-7" name="discValidity"
+                                value="{{tutorial.Validity}}">
                         </div>
 
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
